[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.137", features = ["derive"]}
dotenv = "0.15.0"
config = "0.13.1"
tokio = { version = "1.18.2", features = ["full"] }
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-postgres = "0.7.6"